--- a/ansible/munge_setup.yml
+++ b/ansible/munge_setup.yml
@@ -22,6 +22,8 @@
         remote_src: yes
       when: inventory_hostname != "dgx10"
       delegate_to: dgx10
+      tags:
+        - key
 
     - name: Запуск и включение MUNGE на всех узлах
       systemd:
