--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -68,7 +68,7 @@
     # Установка пакетов SLURM в зависимости от типа узла
     - name: Установить SLURM пакеты на контроллер
       apt:
-        deb: "/tmp/slurm-{{ slurm_version }}/../slurm-smd_{{ slurm_version }}*.deb"
+        deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd_{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_controller']
       tags: build_slurm
       
