--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -74,6 +74,6 @@
       
     - name: Установить SLURM пакеты на узлы
       apt:
-        deb: "/tmp/slurm-{{ slurm_version }}/../slurm-smd-slurmd_{{ slurm_version }}*.deb"
+        deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd-slurmd_{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_nodes']
       tags: build_slurm
