--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -75,5 +75,5 @@
     - name: Установить SLURM пакеты на узлы
       apt:
         deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd*{{ slurm_version }}*.deb"
-      when: inventory_hostname in groups['slurm_nodes']
+      when: inventory_hostname in groups['slurm_cpu_nodes']
       tags: build_slurm
