--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -57,17 +57,39 @@
       tags: build_slurm
       
     # Установка пакетов SLURM в зависимости от типа узла
-    - name: Установить SLURM пакеты на контроллер
+    - name: Добавить SLURM пакеты на контроллер
       apt:
         deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd*{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_controller']
       tags: build_slurm
       
-    - name: Установить SLURM пакеты на узлы
+    - name: Добавить SLURM пакеты на узлы
       apt:
         deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd*{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_cpu_nodes']
       tags: build_slurm
+
+      # Установка пакетов SLURM в зависимости от типа узла
+    - name: Установить SLURM пакеты на контроллер
+      apt:
+        deb: {{ item }}
+      with_items:
+        - /tmp/slurm-smd_24.05.4-1_amd64.deb
+        - /tmp/slurm-smd-slurmctld_24.05.4-1_amd64.deb
+        - /tmp/slurm-smd-client_24.05.4-1_amd64.deb
+      when: inventory_hostname in groups['slurm_controller']
+      tags: install_slurm
+      
+    - name: Установить SLURM пакеты на узлы
+      apt:
+        deb: {{ item }}
+      with_items:
+        - /tmp/slurm-smd_24.05.4-1_amd64.deb
+        - /tmp/slurm-smd-slurmd_24.05.4-1_amd64.deb
+        - /tmp/slurm-smd-client_24.05.4-1_amd64.deb
+      when: inventory_hostname in groups['slurm_cpu_nodes']
+      tags: install_slurm
+
 
     # Создание необходимых директорий для SLURM
     - name: Создание необходимых директорий для SLURM
