--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -95,6 +95,8 @@
       group:
         name: slurm
         state: present
+      tags:
+        - config
 
     # Создание пользователя slurm
     - name: Создать пользователя slurm без домашней директории
