--- a/ansible/slurm_build_install.yml
+++ b/ansible/slurm_build_install.yml
@@ -46,7 +46,8 @@
       args:
         chdir: "/tmp/slurm-{{ slurm_version }}"
           
-      tags: make_deps
+      tags:
+        - make_deps
       
     # Сборка пакетов SLURM
     - name: Собрать пакеты SLURM
@@ -54,20 +55,22 @@
         debuild -b -uc -us
       args:
         chdir: "/tmp/slurm-{{ slurm_version }}"
-      tags: make_deps
+      tags: 
+        - make_deps
       
     # Установка пакетов SLURM в зависимости от типа узла
     - name: Добавить SLURM пакеты на контроллер
       apt:
         deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd*{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_controller']
-      tags: 
+      #tags: 
       
     - name: Добавить SLURM пакеты на узлы
       apt:
         deb: "/tmp/slurm-{{ slurm_version }}/slurm-smd*{{ slurm_version }}*.deb"
       when: inventory_hostname in groups['slurm_cpu_nodes']
-      tags: make_deps
+      tags: 
+        - make_deps
 
       # Установка пакетов SLURM в зависимости от типа узла
     - name: Установить SLURM пакеты на контроллер
@@ -78,7 +81,8 @@
         - /tmp/slurm-smd-slurmctld_24.05.4-1_amd64.deb
         - /tmp/slurm-smd-client_24.05.4-1_amd64.deb
       when: inventory_hostname in groups['slurm_controller']
-      tags: install_slurm
+      tags: 
+        - install_slurm
       
     - name: Установить SLURM пакеты на узлы
       apt:
