--- a/configs/gres.conf
+++ b/configs/gres.conf
@@ -1,3 +1,1 @@
-GresTypes=gpu
-NodeName=dgx10
-Name=gpu Type=A100 Count=8 File=/dev/nvidia[0-7]
+NodeName=dgx10 Name=gpu Type=A100 Count=8 File=/dev/nvidia[0-7]
