right configs gor gpu detection were born in tortures

--- a/configs/gres.conf
+++ b/configs/gres.conf
@@ -1,1 +1,1 @@
-NodeName=dgx10 Name=gpu Type=A100 Count=8 File=/dev/nvidia[0-7]
+NodeName=dgx10 Name=gpu AutoDetect=off Type=a100 File=/dev/nvidia[0-7]
