--- a/ansible/mount_nfs.yml
+++ b/ansible/mount_nfs.yml
@@ -1,6 +1,6 @@
 ---
-- name: Установка NFS, создание и монтирование общей директории
-  hosts: vu10-2-0[27-30]
+- hosts: vu10-2-0[27-30]
+  name: Установка NFS, создание и монтирование общей директории
   become: yes
   tasks:
     - name: Обновление списка пакетов
