--- a/ansible/mount_nfs.yml
+++ b/ansible/mount_nfs.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: vu10-2-0[27-30]
+- hosts: vu10-2-0*
   name: Установка NFS, создание и монтирование общей директории
   become: yes
   tasks:
