--- a/ansible/install/docker.yml
+++ b/ansible/install/docker.yml
@@ -36,6 +36,7 @@
     - name: Install Docker Module for Python
       pip:
         name: docker
+
     - name: Pull default Docker image
       community.docker.docker_image:
         name: "{{ default_container_image }}"
@@ -47,6 +48,6 @@
         state: present
       user:
         name: kbajbekov
-        group: docker
+        sgroup: docker
 
     
