--- a/ansible/install/docker.yml
+++ b/ansible/install/docker.yml
@@ -42,10 +42,11 @@
         name: "{{ default_container_image }}"
         source: pull
 
-    - name: Create docker group and add current user to it
+    - name: Create docker group
       group:
         name: docker
         state: present
+    - name: add current user to docker group
       user:
         name: kbajbekov
         sgroup: docker
