updated changed configs for Nextflow

--- a/nextflow/configs/wf_alignment/nextflow.config
+++ b/nextflow/configs/wf_alignment/nextflow.config
@@ -1,4 +1,4 @@
-// This file goes to /path/to/.nextflow/assets/epi2me-labs/wf-alignment/
+// CSP: This file goes to /path/to/.nextflow/assets/epi2me-labs/wf-alignment/
 
 //
 // Notes to End Users.
